<resources>
    <string name="app_name">UdemyQuizApp</string>
    <string name="start">Start</string>
    <string name="name">Name</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="welcome">Welcome</string>
    <string name="quiz_app">Quiz App</string>
    <string name="submit">SUBMIT</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="go_to_next_question">GO TO NEXT QUESTION</string>
    <string name="finish">FINISH</string>
    <string name="trophy_image">Trophy Image</string>
    <string name="result">Result</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
</resources>